fix: BOM dans head_assets_css.html causait un text-node + <link> dans body (gap 23px)

--- a/static/css/split/000_theme_tokens_base.css
+++ b/static/css/split/000_theme_tokens_base.css
@@ -282,6 +282,10 @@ html { font-size: 87.5%; }
   outline-offset: 2px;
 }
 
+body > link {
+  display: none !important;
+}
+
 html, body {
   margin: 0;
   padding: 0;
