--- a/static/style.css
+++ b/static/style.css
@@ -283,6 +283,10 @@ html { font-size: 87.5%; }
   outline-offset: 2px;
 }
 
+body > link {
+  display: none !important;
+}
+
 html, body {
   margin: 0;
   padding: 0;
